--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Login.xaml
@@ -29,7 +29,7 @@
         </Grid>
 
         <StackPanel Margin="0,20,0,20">
-            <Button Content="{Binding LoginButtonText, FallbackValue='Login'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,0,15" Command="{Binding LoginCommand}"/>
+            <Button Content="{Binding LoginButtonText, FallbackValue='Login'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,0,15" Command="{Binding LoginCommand}" IsDefault="True"/>
             <Button Content="{Binding RegisterButtonText, FallbackValue='Register'}" Style="{StaticResource StandardButton}" HorizontalAlignment="Center" Margin="0,0,0,0" Command="{Binding NavigateToRegistrationCommand}"/>
         </StackPanel>
         
