--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -5,23 +5,24 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       mc:Ignorable="d" 
+      Background="{StaticResource LightBlueBrush}"
       d:DesignHeight="300" d:DesignWidth="300"
       Title="Register">
 
     <StackPanel>
-        <TextBlock Text="Registration" Style="{StaticResource Title}" HorizontalAlignment="Center" Margin="0,10,0,10"/>
+        <TextBlock Text="Registration" HorizontalAlignment="Center" Margin="0,10,0,10"/>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0" Margin="20,0,0,0" HorizontalAlignment="Center" >
-                <TextBlock Text="Email" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
-                <TextBlock Text="First name" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
-                <TextBlock Text="Surname" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
-                <TextBlock Text="Password" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
-                <TextBlock Text="Confirm Password" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
-                <TextBlock Text="Role" Style="{StaticResource Label}" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Email" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="First name" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Surname" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Password" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Confirm Password" Grid.Column="0" Margin="0,10,0,0"/>
+                <TextBlock Text="Role" Grid.Column="0" Margin="0,10,0,0"/>
             </StackPanel>
             <StackPanel Grid.Column="1" Margin="10,0,10,0">
                 <TextBox Name="EmailTextBox" Margin="0,10,0,0"/>
@@ -52,8 +53,8 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Button Name="BackButton" Style="{StaticResource StandardButton}" Margin="10,10,10,10" Grid.Column="0" Content="Back" Command="{Binding BackCommand}"/>
-            <Button Name="RegisterButton" Style="{StaticResource StandardButton}" Margin="10,10,10,10" Grid.Column="1" Content="Register" Click="RegisterButton_Click"/>
+            <Button Name="BackButton" Margin="10,10,10,10" Grid.Column="0" Content="Back" Command="{Binding BackCommand}"/>
+            <Button Name="RegisterButton" Margin="10,10,10,10" Grid.Column="1" Content="Register" Click="RegisterButton_Click"/>
         </Grid>
     </StackPanel>
 
