--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/TextBoxes.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/TextBoxes.xaml
@@ -2,15 +2,14 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:CSC3045_CS2.Resources.Styles">
 
-    <Style TargetType="{x:Type TextBox}">
-        <Setter Property="Background" Value="{StaticResource LightGrayBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource DarkGrayBrush}"/>
+    <Style TargetType="{x:Type TextBox}" x:Key="DefaultTextBox"> 
         <Setter Property="FontFamily" Value="{StaticResource LatoThin}"/>
+        <Setter Property="FontSize" Value="16"/>
 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
-                    <Border CornerRadius="8" Padding="4,1,4,1" BorderThickness="1" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}">
+                    <Border CornerRadius="4" Padding="4,1,4,1" BorderThickness="2" Background="White" BorderBrush="{StaticResource DarkGrayBrush}">
                         <ScrollViewer x:Name="PART_ContentHost"/>
                     </Border>
                 </ControlTemplate>
@@ -18,14 +17,42 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type PasswordBox}">
-        <Setter Property="Background" Value="{StaticResource LightGrayBrush}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource DarkGrayBrush}"/>
+    <Style TargetType="{x:Type TextBox}" x:Key="InvalidTextBox">
+        <Setter Property="FontFamily" Value="{StaticResource LatoThin}"/>
+        <Setter Property="FontSize" Value="16"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border CornerRadius="4" Padding="4,1,4,1" BorderThickness="2" Background="White" BorderBrush="{StaticResource RedBrush}">
+                        <ScrollViewer x:Name="PART_ContentHost"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type PasswordBox}" x:Key="DefaultPasswordBox">
+        <Setter Property="FontSize" Value="16"/>
 
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type PasswordBox}">
-                    <Border CornerRadius="8" Padding="4,0,4,0" BorderThickness="1" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}">
+                    <Border CornerRadius="4" Padding="4,0,4,0" BorderThickness="2" Background="White"  BorderBrush="{StaticResource DarkGrayBrush}">
+                        <ScrollViewer x:Name="PART_ContentHost"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type PasswordBox}" x:Key="InvalidPasswordBox">
+        <Setter Property="FontSize" Value="16"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type PasswordBox}">
+                    <Border CornerRadius="4" Padding="4,0,4,0" BorderThickness="2" Background="White"  BorderBrush="{StaticResource RedBrush}">
                         <ScrollViewer x:Name="PART_ContentHost"/>
                     </Border>
                 </ControlTemplate>
