Kevin: bug fix on Manage Project Team Page - slight error from the merge

--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Text.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Resources/Styles/Text.xaml
@@ -11,7 +11,7 @@
     <Style TargetType="{x:Type TextBlock}" x:Key="Header">
         <Setter Property="FontFamily" Value="{StaticResource LatoRegular}"/>
         <Setter Property="FontSize" Value="24"/>
-        <Setter Property="Foreground" Value="{StaticResource DarkBlueBrush}"/>
+        <Setter Property="Foreground" Value="{StaticResource BrightBlueBrush}"/>
     </Style>
 
     <Style TargetType="{x:Type TextBlock}" x:Key="Label">
