--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProjectDashboard.xaml
@@ -48,8 +48,12 @@
             <Button Grid.Column="1" Content="Manage Project Team"
                     Command="{Binding GoToAddTeamMemberCommand}"
                     Visibility="{Binding Path=Permissions.Manager, Converter={StaticResource BoolToVisConverter}}"/>
-            <Button Grid.Column="2" Content="Product Backlog"
-                    Command="{Binding GoToProductBacklogCommand}"/>
+            <StackPanel Grid.Column="2">
+                <Button Content="Product Backlog" Command="{Binding GoToProductBacklogCommand}"/>
+                <Button Content="Create Sprint" 
+                        Command="{Binding GoToCreateSprintCommand}"
+                        Visibility="{Binding Path=Permissions.ScrumMaster, Converter={StaticResource BoolToVisConverter}}"/>
+            </StackPanel>
         </Grid>
 
         <TextBlock Grid.Row="3" Text="Project Manager" TextAlignment="Left" FontWeight="Bold" FontSize="16" Margin="10"></TextBlock>
