--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/AddProjectTeamMember.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/AddProjectTeamMember.xaml
@@ -40,9 +40,12 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
+
+                <Image Source="{Binding ProfilePictureSource, Mode=OneWay}" Visibility="{Binding SearchResultUser, TargetNullValue=Collapsed}"  Grid.Column="0" Height="40" Width="40" HorizontalAlignment="Left" Margin="57,1,0,0" Name="ProfilePicture" Stretch="Fill" VerticalAlignment="Top"/>
                 
-                <TextBlock Grid.Column="0" HorizontalAlignment="Center" Margin="10,0,10,0">
+                <TextBlock Grid.Column="1" HorizontalAlignment="Center" Margin="10,0,10,0">
                     <TextBlock.Text>
                         <MultiBinding StringFormat="{}{0} {1}">
                             <Binding Path="SearchResultUser.Forename" Mode="OneWay"/>
@@ -51,9 +54,9 @@
                     </TextBlock.Text>
                 </TextBlock>
                 
-                <TextBlock Grid.Column="1" Text="{Binding SearchResultUser.Email, Mode=OneWay}" HorizontalAlignment="Center" Margin="10,0,10,0"/>
+                <TextBlock Grid.Column="2" Text="{Binding SearchResultUser.Email, Mode=OneWay}" HorizontalAlignment="Center" Margin="10,0,10,0"/>
                 
-                <Grid Grid.Column="2" HorizontalAlignment="Stretch" Margin="10,0,10,0">
+                <Grid Grid.Column="3" HorizontalAlignment="Stretch" Margin="10,0,10,0">
                     <StackPanel>
                         <TextBlock Text="Developer" Visibility="{Binding SearchResultUser.Roles.Developer, Converter={StaticResource BoolToVisConverter}, FallbackValue=Collapsed}"/>
                         <TextBlock Text="Scrum Master" Visibility="{Binding SearchResultUser.Roles.ScrumMaster, Converter={StaticResource BoolToVisConverter}, FallbackValue=Collapsed}"/>
