--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -52,10 +52,16 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Button Name="BackButton" Margin="10,10,10,10" Grid.Column="0" Content="Back" Command="{Binding BackCommand}"/>
             <Button Name="RegisterButton" Margin="10,10,10,10" Grid.Column="1" Content="Register" Click="RegisterButton_Click"/>
+            <Button Name="ProfileButton" Margin="10,10,10,10" Grid.Column="2" Content="Add Profiler" Click="ProfileButton_Click"/>
         </Grid>
+        <StackPanel Margin="0,20,0,20">
+            <Image Grid.ColumnSpan="3" Grid.Row="11" Height="14" HorizontalAlignment="Left" Margin="57,1,0,0" Name="profile" Stretch="Fill" VerticalAlignment="Top" Width="108" />
+        </StackPanel>
     </StackPanel>
+    
 
 </Page>
