--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProductBacklog.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/ProductBacklog.xaml
@@ -2,7 +2,8 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:dd="urn:gong-wpf-dragdrop"
       xmlns:local="clr-namespace:CSC3045_CS2"
       mc:Ignorable="d" 
       Background="{StaticResource LightBlueBrush}"
@@ -33,7 +34,7 @@
                     Visibility="{Binding Permissions.ProductOwner, Converter={StaticResource BoolToVisConverter}}"/>
         </Grid>
 
-        <ListBox Grid.Row="2" Margin="10" Name="StoryList" HorizontalContentAlignment="Stretch" AllowDrop="True">
+        <ListBox Grid.Row="2" ItemsSource="{Binding Backlog}" Margin="10" Name="StoryList" HorizontalContentAlignment="Stretch" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Margin="0,0,0,10">
