--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/Register.xaml
@@ -3,7 +3,6 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:CSC3045_CS2.Pages"
       xmlns:utility="clr-namespace:CSC3045_CS2.Utility"
       mc:Ignorable="d" 
       Background="{StaticResource BackgroundGradient}"
@@ -30,7 +29,7 @@
                 <AdornerDecorator>
                     <TextBox Name="FirstnameTextBox" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0"  Grid.Row="0">
                         <utility:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource DefaultTextBlock}" HorizontalAlignment="Center">Firstname</TextBlock>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center">Firstname</TextBlock>
                         </utility:WatermarkService.Watermark>
                     </TextBox>
                 </AdornerDecorator>
@@ -38,7 +37,7 @@
                 <AdornerDecorator>
                     <TextBox Name="SurnameTextBox" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0"  Grid.Row="1">
                     <utility:WatermarkService.Watermark>
-                        <TextBlock Style="{StaticResource DefaultTextBlock}" HorizontalAlignment="Center">Surname</TextBlock>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Center">Surname</TextBlock>
                     </utility:WatermarkService.Watermark>
                     </TextBox>
                 </AdornerDecorator>
@@ -61,7 +60,7 @@
                 <AdornerDecorator>
                     <TextBox Name="EmailTextBox" Style="{StaticResource DefaultTextBox}" Margin="0,5,0,0">
                         <utility:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource DefaultTextBlock}"  HorizontalAlignment="Left" Margin="72,0,0,0">E-mail</TextBlock>
+                            <TextBlock Style="{StaticResource Watermark}"  HorizontalAlignment="Left" Margin="72,0,0,0">E-mail</TextBlock>
                         </utility:WatermarkService.Watermark>
                     </TextBox>
                 </AdornerDecorator>
@@ -69,7 +68,7 @@
                 <AdornerDecorator>
                     <PasswordBox Name="PasswordTextBox" Style="{StaticResource DefaultPasswordBox}" Margin="0,5,0,0" >
                         <utility:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource DefaultTextBlock}" HorizontalAlignment="Left" Margin="72,0,0,0" >Password</TextBlock>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Left" Margin="72,0,0,0" >Password</TextBlock>
                         </utility:WatermarkService.Watermark>
                     </PasswordBox>
                 </AdornerDecorator>
@@ -77,7 +76,7 @@
                 <AdornerDecorator>
                     <PasswordBox Name="ConfirmPasswordTextBox" Style="{StaticResource DefaultPasswordBox}" Margin="0,5,0,0" ToolTip="Passwords Must Match" >
                         <utility:WatermarkService.Watermark>
-                            <TextBlock Style="{StaticResource DefaultTextBlock}" HorizontalAlignment="Left"  Margin="72,0,0,0">Confirm Password</TextBlock>
+                            <TextBlock Style="{StaticResource Watermark}" HorizontalAlignment="Left"  Margin="72,0,0,0">Confirm Password</TextBlock>
                         </utility:WatermarkService.Watermark>
                     </PasswordBox>
                 </AdornerDecorator>
@@ -92,9 +91,9 @@
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,5" Style="{StaticResource DefaultTextBlock}" FontSize="12" FontFamily="Lato Thin"  HorizontalAlignment="Center">Product Owner</TextBlock>
-                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="0,5" Style="{StaticResource DefaultTextBlock}" FontSize="12" FontFamily="Lato Thin"  HorizontalAlignment="Center">Scrum Master</TextBlock>
-                    <TextBlock Grid.Column="2" Grid.Row="0" Margin="0,5" Style="{StaticResource DefaultTextBlock}" FontSize="12" FontFamily="Lato Thin"  HorizontalAlignment="Center">Developer</TextBlock>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Margin="0,5" Style="{StaticResource Watermark}" FontSize="12" FontFamily="Lato Thin"  HorizontalAlignment="Center">Product Owner</TextBlock>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="0,5" Style="{StaticResource Watermark}" FontSize="12" FontFamily="Lato Thin"  HorizontalAlignment="Center">Scrum Master</TextBlock>
+                    <TextBlock Grid.Column="2" Grid.Row="0" Margin="0,5" Style="{StaticResource Watermark}" FontSize="12" FontFamily="Lato Thin"  HorizontalAlignment="Center">Developer</TextBlock>
                     <CheckBox Name="ProductOwnerCheckBox" Grid.Column="0" Grid.Row="1" Margin="0,5"  HorizontalAlignment="Center"></CheckBox>
                     <CheckBox Name="ScrumMasterCheckBox" Grid.Column="1" Grid.Row="1" Margin="0,5"  HorizontalAlignment="Center"></CheckBox>
                     <CheckBox Name="DeveloperCheckBox" Grid.Column="2" Grid.Row="1" Margin="0,5" HorizontalAlignment="Center"></CheckBox>
